# speakoro

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
speakoro-cli/: Cargo.toml
speakoro-cli/src/: main.rs
speakoro-macros/: Cargo.toml
speakoro-macros/src/: lib.rs
speakoro-macros/tests/: macro_test.rs
src/: lib.rs  utils.rs
src/kokoro/: mod.rs  tokenizer.rs
