[workspace]
resolver = "3"
members = [".", "speakoro-cli", "speakoro-macros"]
default-members = ["."]

[package]
name = "speakoro"
version = "0.1.0"
edition = "2024"

[features]
default = []
download-data = ["dep:anyhow", "dep:ureq"]

[dependencies]
anyhow = "1.0.97"
hound = "3.5.1"
speakoro-macros = { version = "0.1.0", path = "./speakoro-macros" }
ndarray = "0.16.1"
ort = "=2.0.0-rc.9"
phf = { version = "0.11.3", features = ["macros", "phf_macros"] }
regex = "1.11.1"
strum = { version = "0.27.1", features = ["derive"] }

[build-dependencies]
anyhow = { version = "1.0.97", optional = true }
ureq = { version = "3.0.11", optional = true }
