[package]
name = "speakoro-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["cargo"] }
phonemoro = { git = "https://github.com/lastleon/phonemoro", version = "0.3.0", features = ["download-data"] }
speakoro = { version = "0.1.0", path = "..", features = ["download-data"]}
strum = "0.27.1"
